# CCDarkSens

./: CMakeLists.txt  README.md  dme_limit_curve.root  p100K_table_plots.root  text.txt
apps/: ccdarksens_check_dmelectron.cc  ccdarksens_check_dmelectron_chain_cluster_mc.cc  ccdarksens_check_dmelectron_chain_cluster_mc_old.cc  ccdarksens_plot_dmelectron_limit.cc  ccdarksens_scan_dmelectron_grid.cc  ccdarksens_sensitivity.cc  ccdarksens_sensitivity_cluster_mc.cc  ccdarksens_sensitivity_fast.cc
configs/: ccdarksens_check_dmelectron_chain_cluster_mc.json  ccdarksens_scan_dmelectron_grid.json  ccdarksens_scan_dmelectron_grid_LBC_Paper.json  ccdarksens_scan_dmelectron_grid_ultralight.json  check_dmelectron_single.json  mvp_dm_electron_min.json  qedark_generate_Si_heavy.json  qedark_generate_Si_ultralight.json
data/: p100K_table.csv
data/previous_limits/heavy_mediator/: DAMIC-M_this_work_bold_black_.csv  DarkSide50.csv  Panda4T.csv  SENSEI.csv  SuperCDMS.csv  damic-m_1kgyear_mike.csv  freezeout.csv
data/previous_limits/light_mediator/: DAMIC-M_this_work_bold_black_.csv  DarkSide50.csv  Panda4T.csv  SENSEI.csv  SuperCDMS.csv  damic-m_1kgyear_mike.csv  freezein.csv
data/qedark_rates/Si/heavy/: dRdE_Si_heavy_m0.500000_s1.0e-34.csv  dRdE_Si_heavy_m0.500000_s1.0e-40.csv  dRdE_Si_heavy_m0.500000_s1.6e-39.csv  dRdE_Si_heavy_m0.500000_s2.5e-38.csv  dRdE_Si_heavy_m0.500000_s4.0e-37.csv  dRdE_Si_heavy_m0.500000_s6.3e-36.csv  dRdE_Si_heavy_m0.530000_s1.0e-28.csv  dRdE_Si_heavy_m0.530000_s1.0e-29.csv  dRdE_Si_heavy_m0.530000_s1.0e-30.csv  dRdE_Si_heavy_m0.530000_s1.0e-31.csv  dRdE_Si_heavy_m0.530000_s1.0e-32.csv  dRdE_Si_heavy_m0.530000_s1.0e-33.csv  dRdE_Si_heavy_m0.530000_s1.0e-34.csv  dRdE_Si_heavy_m0.530000_s1.0e-35.csv  dRdE_Si_heavy_m0.530000_s1.0e-36.csv  dRdE_Si_heavy_m0.530000_s1.0e-37.csv  dRdE_Si_heavy_m0.530000_s1.0e-38.csv  dRdE_Si_heavy_m0.530000_s1.0e-39.csv  dRdE_Si_heavy_m0.530000_s1.0e-40.csv  dRdE_Si_heavy_m0.530000_s1.0e-41.csv  dRdE_Si_heavy_m0.530000_s1.0e-42.csv  dRdE_Si_heavy_m0.530000_s1.0e-43.csv  dRdE_Si_heavy_m0.530000_s1.0e-44.csv  dRdE_Si_heavy_m0.530000_s1.3e-29.csv  dRdE_Si_heavy_m0.530000_s1.3e-32.csv  dRdE_Si_heavy_m0.530000_s1.3e-35.csv  dRdE_Si_heavy_m0.530000_s1.3e-38.csv  dRdE_Si_heavy_m0.530000_s1.6e-29.csv  dRdE_Si_heavy_m0.530000_s1.6e-30.csv  dRdE_Si_heavy_m0.530000_s1.6e-31.csv  dRdE_Si_heavy_m0.530000_s1.6e-32.csv  dRdE_Si_heavy_m0.530000_s1.6e-33.csv  dRdE_Si_heavy_m0.530000_s1.6e-34.csv  dRdE_Si_heavy_m0.530000_s1.6e-35.csv  dRdE_Si_heavy_m0.530000_s1.6e-36.csv  dRdE_Si_heavy_m0.530000_s1.6e-37.csv  dRdE_Si_heavy_m0.530000_s1.6e-38.csv  dRdE_Si_heavy_m0.530000_s1.6e-39.csv  dRdE_Si_heavy_m0.530000_s1.6e-40.csv  dRdE_Si_heavy_m0.530000_s1.6e-41.csv  (+4156 more)
data/qedark_rates/Si/massless/: dRdE_Si_massless_m0.500000_s1.0e-34.csv  dRdE_Si_massless_m0.500000_s1.0e-40.csv  dRdE_Si_massless_m0.500000_s1.6e-39.csv  dRdE_Si_massless_m0.500000_s2.5e-38.csv  dRdE_Si_massless_m0.500000_s4.0e-37.csv  dRdE_Si_massless_m0.500000_s6.3e-36.csv  dRdE_Si_massless_m0.530000_s1.0e-28.csv  dRdE_Si_massless_m0.530000_s1.0e-29.csv  dRdE_Si_massless_m0.530000_s1.0e-30.csv  dRdE_Si_massless_m0.530000_s1.0e-31.csv  dRdE_Si_massless_m0.530000_s1.0e-32.csv  dRdE_Si_massless_m0.530000_s1.0e-33.csv  dRdE_Si_massless_m0.530000_s1.0e-34.csv  (+4183 more)
include/ccdarksens/backgrounds/: BackgroundBuilder.hh  PoissonDarkCurrent.hh
include/ccdarksens/detector/: Detector.hh
include/ccdarksens/experiment/: ExperimentSetup.hh
include/ccdarksens/io/: ConfigManager.hh  RateTable.hh
include/ccdarksens/model/: DMElectronModel.hh
include/ccdarksens/models/: DMElectronModel.hh
include/ccdarksens/rates/: RateSource.hh
include/ccdarksens/response/: ChargeIonization.hh  ClusterMC.hh  DetectorResponsePipeline.hh  Diffusion.hh  PatternEfficiency.hh
include/ccdarksens/stats/: ITestStatistic.hh  PoissonAsimovPLR.hh  StatisticsConfig.hh  TestStatisticFactory.hh
outputs/: p100K_table_plots.root
outputs/check_dmelectron_chain_cluster_mc/: check_dmelectron_chain_cluster_mc.root
outputs/mvp_dm_electron/: cluster_mc_check.root  fast_check.root  mvp_check.root
outputs/scan_dmelectron_grid_cluster_mc/: scan_dmelectron_grid.root
outputs/scan_dmelectron_grid_cluster_mc_heavy/: scan_dmelectron_grid.root
outputs/scan_dmelectron_grid_cluster_mc_ultralight/: scan_dmelectron_grid.root
python/: qedark_bridge.py
python/ccdarkphys/: __init__.py
python/ccdarkphys/common/: __init__.py  constants.py  halo.py  io.py
python/ccdarkphys/qcdark/: __init__.py  entry.py
python/ccdarkphys/qedark/: __init__.py  entry.py
src/backgrounds/: BackgroundBuilder.cc  PoissonDarkCurrent.cc
src/detector/: Detector.cc
src/experiment/: ExperimentSetup.cc
src/io/: ConfigManager.cc  RateTable.cc
src/model/: DMElectronModel.cc
src/rates/: RateSource.cc
src/response/: ChargeIonization.cc  ClusterMC.cc  DetectorResponsePipeline.cc  Diffusion.cc  PatternEfficiency.cc
src/stats/: PoissonAsimovPLR.cc  TestStatisticFactory.cc
utils/: plot_p100K_table.cc  plot_qedark_rates.py  qedark_entry.py  qedark_generate.py  qedark_generate_grid.py
(+9369 files in other folders)
